--- a/source/index.html
+++ b/source/index.html
@@ -5,17 +5,23 @@
   <meta charset="UTF-8">
   <title>Drink2Go</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="css/nouislider.min.css">
+  <link rel="stylesheet" href="vendor/nouislider.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="favicon.ico" sizes="any">
+  <link rel="icon" href="images/favicon.png">
+  <link rel="preload" href="fonts/montserrat-bold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/montserrat-medium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/montserrat-regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/montserrat-semibold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
 </head>
 
 <body class="page__body">
-  <header class="header page__centerer">
+  <header class="header page__centerer" data-test="header">
     <a href="index.html" class="header__logo">
       <picture>
-        <source media="(min-width: 1440px)" srcset="img/logo.svg#desktop" width="170" height="36">
-        <source media="(min-width: 768px)" srcset="img/logo.svg#tablet" width="82" height="36">
-        <img class="header__logo-image" src="img/logo.svg#mobile" width="32" height="36" alt="Логотип Drink2Go.">
+        <source media="(min-width: 1440px)" srcset="images/logo.svg#desktop" width="170" height="36">
+        <source media="(min-width: 768px)" srcset="images/logo.svg#tablet" width="82" height="36">
+        <img class="header__logo-image" src="images/logo.svg#mobile" width="32" height="36" alt="Логотип Drink2Go.">
       </picture>
     </a>
     <p class="header__description">Интернет-магазин кофейных напитков</p>
@@ -35,7 +41,7 @@
         </ul>
       </nav>
       <div class="header__user-navigation-toggle-wrapper">
-        <button class="header__user-navigation-toggle header__user-navigation-toggle--closed-navigation" type="button">
+        <button class="header__user-navigation-toggle header__user-navigation-toggle--closed-navigation js-toggle-button" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
       </div>
@@ -66,7 +72,7 @@
     </nav>
   </header>
   <main class="main-index">
-    <section class="main-index__slider-section main-index__slider-section--slider-0-bg">
+    <section class="main-index__slider-section main-index__slider-section--slider-0-bg" data-test="hero">
       <h1 class="visually-hidden">Интернет-магазин кофейных напитков</h1>
       <div class="main-index__slider-container">
         <div class="main-index__slider slider">
@@ -74,9 +80,9 @@
             <h2 class="slider__heading heading heading--slide-heading">Декаф Флэт Уайт</h2>
             <p class="slider__badge heading heading--badge">Новинка!</p>
             <picture>
-              <source media="(min-width: 1440px)" srcset="img/slider-images/slider-product1-desktop@1x.png, img/slider-images/slider-product1-desktop@2x.png 2x" type="image/png" width="600" height="600">
-              <source media="(min-width: 768px)" srcset="img/slider-images/slider-product1-tablet@1x.png, img/slider-images/slider-product1-tablet@2x.png 2x" type="image/png" width="476" height="476">
-              <img class="slider__image" src="img/slider-images/slider-product1-mobile@1x.png" srcset="img/slider-images/slider-product1-mobile@2x.png 2x" width="280" height="280" alt="Банка с кофе.">
+              <source media="(min-width: 1440px)" srcset="images/slider-images/slider-product1-desktop@1x.png, images/slider-images/slider-product1-desktop@2x.png 2x" type="image/png" width="600" height="600">
+              <source media="(min-width: 768px)" srcset="images/slider-images/slider-product1-tablet@1x.png, images/slider-images/slider-product1-tablet@2x.png 2x" type="image/png" width="476" height="476">
+              <img class="slider__image" src="images/slider-images/slider-product1-mobile@1x.png" srcset="images/slider-images/slider-product1-mobile@2x.png 2x" width="280" height="280" alt="Банка с кофе.">
             </picture>
             <p class="slider__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским
               молоком
@@ -92,9 +98,9 @@
             <h2 class="slider__heading heading heading--slide-heading">Лавандовый Латте</h2>
             <p class="slider__badge heading heading--badge">Новинка!</p>
             <picture>
-              <source media="(min-width: 1440px)" srcset="img/slider-images/slider-product2-desktop@1x.png, img/slider-images/slider-product2-desktop@2x.png 2x" type="image/png" width="600" height="600">
-              <source media="(min-width: 768px)" srcset="img/slider-images/slider-product2-tablet@1x.png, img/slider-images/slider-product2-tablet@2x.png 2x" type="image/png" width="476" height="476">
-              <img class="slider__image" src="img/slider-images/slider-product2-mobile@1x.png" srcset="img/slider-images/slider-product2-mobile@2x.png 2x" width="280" height="280" alt="Банка с кофе.">
+              <source media="(min-width: 1440px)" srcset="images/slider-images/slider-product2-desktop@1x.png, images/slider-images/slider-product2-desktop@2x.png 2x" type="image/png" width="600" height="600">
+              <source media="(min-width: 768px)" srcset="images/slider-images/slider-product2-tablet@1x.png, images/slider-images/slider-product2-tablet@2x.png 2x" type="image/png" width="476" height="476">
+              <img class="slider__image" src="images/slider-images/slider-product2-mobile@1x.png" srcset="images/slider-images/slider-product2-mobile@2x.png 2x" width="280" height="280" alt="Банка с кофе.">
             </picture>
             <p class="slider__description">Невероятное сочетание перуанской высокогорной арабики с молоком ламы и
               лавандовым сиропом унесёт вас прямо на вершину Радужных гор</p>
@@ -108,9 +114,9 @@
             <h2 class="slider__heading heading heading--slide-heading">Тройной Эспрессо</h2>
             <p class="slider__badge heading heading--badge">Новинка!</p>
             <picture>
-              <source media="(min-width: 1440px)" srcset="img/slider-images/slider-product3-desktop@1x.png, img/slider-images/slider-product3-desktop@2x.png 2x" type="image/png" width="600" height="600">
-              <source media="(min-width: 768px)" srcset="img/slider-images/slider-product3-tablet@1x.png, img/slider-images/slider-product3-tablet@2x.png 2x" type="image/png" width="476" height="476">
-              <img class="slider__image" src="img/slider-images/slider-product3-mobile@1x.png" srcset="img/slider-images/slider-product3-mobile@2x.png 2x" width="280" height="280" alt="Банка с кофе.">
+              <source media="(min-width: 1440px)" srcset="images/slider-images/slider-product3-desktop@1x.png, images/slider-images/slider-product3-desktop@2x.png 2x" type="image/png" width="600" height="600">
+              <source media="(min-width: 768px)" srcset="images/slider-images/slider-product3-tablet@1x.png, images/slider-images/slider-product3-tablet@2x.png 2x" type="image/png" width="476" height="476">
+              <img class="slider__image" src="images/slider-images/slider-product3-mobile@1x.png" srcset="images/slider-images/slider-product3-mobile@2x.png 2x" width="280" height="280" alt="Банка с кофе.">
             </picture>
             <p class="slider__description">Мощнее укола адреналина, чернее самой тёмной ночи, этот тройной эспрессо из
               Колумбии покажет вам, что такое настоящая бодрость</p>
@@ -122,10 +128,10 @@
           </div>
         </div>
       </div>
-      <button class="main-index__slider-button main-index__slider-button--prev" type="button" aria-label="Посмотреть предыдущий слайд"></button>
-      <button class="main-index__slider-button main-index__slider-button--next" type="button" aria-label="Посмотреть следующий слайд"></button>
+      <button class="main-index__slider-button main-index__slider-button--prev slider-button-prev" type="button" aria-label="Посмотреть предыдущий слайд"></button>
+      <button class="main-index__slider-button main-index__slider-button--next slider-button-next" type="button" aria-label="Посмотреть следующий слайд"></button>
     </section>
-    <section class="main-index__features features page__container">
+    <section class="main-index__features features page__container" data-test="features">
       <h2 class="features__heading heading heading--lvl-2">Главные причины выбрать Drink2Go</h2>
       <p class="features__badge heading heading--badge">Преимущества</p>
       <ul class="features__list">
@@ -148,7 +154,7 @@
         </li>
       </ul>
     </section>
-    <section class="main-index__catalog">
+    <section class="main-index__catalog" data-test="catalog">
       <div class="page__container catalog">
         <h2 class="catalog__heading heading heading--lvl-2">Каталог кофейных напитков</h2>
         <p class="catalog__badge heading heading--badge">Каталог</p>
@@ -241,9 +247,9 @@
             <button class="filters-form__button button button--alternative" type="reset">Сбросить</button>
           </div>
         </form>
-        <div class="filters-form__sort-selector-container">
-          <span class="filters-form__sort-selector-label label-name">Сортировка:</span>
-          <select class="filters-form__sort-selector" aria-label="Сортировка">
+        <div class="catalog__sort-selector-container">
+          <span class="catalog__sort-selector-label label-name">Сортировка:</span>
+          <select class="catalog__sort-selector" aria-label="Сортировка">
             <option value="default">по умолчанию</option>
             <option value="default">сначала дешевые</option>
             <option value="expensive">Сначала дорогие</option>
@@ -252,7 +258,7 @@
         <ul class="catalog__items-list">
           <li class="catalog__item item">
             <picture>
-              <img class="item__image" src="img/products/product1@1x.png" srcset="img/products/product1@2x.png 2x" width="130" height="188" alt="Банка с кофе.">
+              <img class="item__image" src="images/products/product1@1x.png" srcset="images/products/product1@2x.png 2x" width="130" height="188" alt="Банка с кофе.">
             </picture>
             <h3 class="item__heading heading heading--lvl-3">Декаф Флэт Уайт</h3>
             <p class="item__description">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
@@ -261,7 +267,7 @@
           </li>
           <li class="catalog__item item">
             <picture>
-              <img class="item__image" src="img/products/product2@1x.png" srcset="img/products/product2@2x.png 2x" width="130" height="188" alt="Банка с кофе.">
+              <img class="item__image" src="images/products/product2@1x.png" srcset="images/products/product2@2x.png 2x" width="130" height="188" alt="Банка с кофе.">
             </picture>
             <h3 class="item__heading heading heading--lvl-3">Декаф Флэт Уайт</h3>
             <p class="item__description">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
@@ -270,7 +276,7 @@
           </li>
           <li class="catalog__item item">
             <picture>
-              <img class="item__image" src="img/products/product3@1x.png" srcset="img/products/product3@2x.png 2x" width="130" height="188" alt="Банка с кофе.">
+              <img class="item__image" src="images/products/product3@1x.png" srcset="images/products/product3@2x.png 2x" width="130" height="188" alt="Банка с кофе.">
             </picture>
             <h3 class="item__heading heading heading--lvl-3">Декаф Флэт Уайт</h3>
             <p class="item__description">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
@@ -279,7 +285,7 @@
           </li>
           <li class="catalog__item item">
             <picture>
-              <img class="item__image" src="img/products/product4@1x.png" srcset="img/products/product4@2x.png 2x" width="130" height="188" alt="Банка с кофе.">
+              <img class="item__image" src="images/products/product4@1x.png" srcset="images/products/product4@2x.png 2x" width="130" height="188" alt="Банка с кофе.">
             </picture>
             <h3 class="item__heading heading heading--lvl-3">Декаф Флэт Уайт</h3>
             <p class="item__description">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
@@ -288,7 +294,7 @@
           </li>
           <li class="catalog__item item">
             <picture>
-              <img class="item__image" src="img/products/product5@1x.png" srcset="img/products/product5@2x.png 2x" width="130" height="188" alt="Банка с кофе.">
+              <img class="item__image" src="images/products/product5@1x.png" srcset="images/products/product5@2x.png 2x" width="130" height="188" alt="Банка с кофе.">
             </picture>
             <h3 class="item__heading heading heading--lvl-3">Декаф Флэт Уайт</h3>
             <p class="item__description">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
@@ -297,7 +303,7 @@
           </li>
           <li class="catalog__item item">
             <picture>
-              <img class="item__image" src="img/products/product6@1x.png" srcset="img/products/product6@2x.png 2x" width="130" height="188" alt="Банка с кофе.">
+              <img class="item__image" src="images/products/product6@1x.png" srcset="images/products/product6@2x.png 2x" width="130" height="188" alt="Банка с кофе.">
             </picture>
             <h3 class="item__heading heading heading--lvl-3">Декаф Флэт Уайт</h3>
             <p class="item__description">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
@@ -329,21 +335,21 @@
         </ol>
       </div>
     </section>
-    <section class="main-index__map map">
+    <section class="main-index__map map" data-test="map">
       <h2 class="visually-hidden">Схема проезда</h2>
       <picture>
-        <source media="(min-width: 1440px)" srcset="img/map-image-desktop@1x.jpg, img/map-image-desktop@2x.jpg 2x" type="image/jpg" width="1440" height="540">
-        <source media="(min-width: 768px)" srcset="img/map-image-tablet@1x.jpg, img/map-image-tablet@2x.jpg 2x" type="image/jpg" width="768" height="480">
-        <img class="map__static" src="img/map-image-mobile@1x.jpg" srcset="img/map-image-mobile@2x.jpg 2x" width="320" height="420" alt="Карта схемы проезда">
+        <source media="(min-width: 1440px)" srcset="images/map-image-desktop@1x.jpg, images/map-image-desktop@2x.jpg 2x" type="image/jpg" width="1440" height="540">
+        <source media="(min-width: 768px)" srcset="images/map-image-tablet@1x.jpg, images/map-image-tablet@2x.jpg 2x" type="image/jpg" width="768" height="480">
+        <img class="map__static" src="images/map-image-mobile@1x.jpg" srcset="images/map-image-mobile@2x.jpg 2x" width="320" height="420" alt="Карта схемы проезда">
       </picture>
     </section>
   </main>
-  <footer class="page__container footer">
+  <footer class="page__container footer" data-test="footer">
     <section class="footer__socials footer__border">
       <a href="index.html" class="footer__logo">
         <picture>
-          <source media="(min-width: 768px)" srcset="img/logo.svg#desktop" width="170" height="36">
-          <img class="footer__logo-image" src="img/logo.svg#tablet" width="82" height="36" alt="Логотип Drink2Go.">
+          <source media="(min-width: 768px)" srcset="images/logo.svg#desktop" width="170" height="36">
+          <img class="footer__logo-image" src="images/logo.svg#tablet" width="82" height="36" alt="Логотип Drink2Go.">
         </picture>
       </a>
       <p class="footer__description">Интернет-магазин кофейных напитков</p>
@@ -418,7 +424,7 @@
       </a>
     </section>
   </footer>
-  <script src="./js/nouislider/nouislider.min.js"></script>
+  <script src="vendor/nouislider.min.js"></script>
   <script src="./js/script.js" type="module"></script>
 </body>
 
